feat: add deploy

--- a/blog.guitarrapc.com/src/pages/index.astro
+++ b/blog.guitarrapc.com/src/pages/index.astro
@@ -8,6 +8,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
